Must set 100% height on html, body, and all containers to make sure max-height works on firefox

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -19,7 +19,10 @@ body {
 .main-pic {
 	display: block;
 	margin: 0 auto;
-	max-height: 85%;
+	max-height: 100%;
 	max-width: 100%;
 }
 
+.container, html, body {
+	height: 100%;
+}
